# jobflow

./: .gitignore  DESIGN.md  DESIGN_REVIEW.md  JobFlow_PRD_v1.0.docx  README.md  WORK_LOG.md  claude-setup.sh
jobflow-dashboard/: jest.config.ts  next.config.ts  package-lock.json  package.json  vercel.json
jobflow-dashboard/src/: middleware.ts
jobflow-dashboard/src/__tests__/: KanbanBoard.test.tsx  TaskSlideOver.test.tsx  auth.test.ts  buildSlackMessage.test.ts  daily_summary.test.ts  decrypt.test.ts  notify.test.ts
jobflow-dashboard/src/app/: layout.tsx  page.tsx
jobflow-dashboard/src/app/api/history/[jobId]/: route.ts
jobflow-dashboard/src/app/api/jobs/: route.ts
jobflow-dashboard/src/app/api/slack/daily-summary/: route.ts
jobflow-dashboard/src/app/api/slack/notify/: route.ts
jobflow-dashboard/src/app/jobs/[jobId]/: page.tsx
jobflow-dashboard/src/app/jobs/[jobId]/history/: page.tsx
jobflow-dashboard/src/app/login/: page.tsx
jobflow-dashboard/src/components/: HistoryViewer.tsx  JobSelector.tsx  KanbanBoard.tsx  MobileTabFilter.tsx  TaskCard.tsx  TaskSlideOver.tsx
jobflow-dashboard/src/hooks/: useJobs.ts
jobflow-dashboard/src/lib/: auth.ts  decrypt.ts  github.ts  parseMarkdown.ts  slack.ts  types.ts
jobflow-mcp/: pyproject.toml
jobflow-mcp/src/jobflow_mcp/: __init__.py  claude_md.py  cli.py  config.py  file_parser.py  git_ops.py  job_manager.py  merge.py  notify.py  server.py  sync.py  task_manager.py
jobflow-mcp/tests/: test_file_parser.py  test_job_manager.py  test_merge.py  test_notify.py  test_sync.py  test_task_manager.py
